Render home page with static files

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,8 +3,8 @@
 <!-- Starts Head Section -->
 
 <head>
-    <link rel="stylesheet" href="/static/css/styles.css">
-    <link rel="icon" type="image/x-icon" href="/static/images/free-30-instagram-stories-icons23_122570.png">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" type="image/x-icon" href="/images/free-30-instagram-stories-icons23_122570.png">
     <title>Petstagram</title>
 </head>
 
@@ -26,7 +26,7 @@
                 <div class="logo">
                     <!-- Link to Home Page -->
                     <a href="#">
-                        <img width="50px" src="/static/images/free-30-instagram-stories-icons23_122570.png" alt="img1">
+                        <img width="50px" src="/images/free-30-instagram-stories-icons23_122570.png" alt="img1">
                     </a>
                     <!-- Link to Home Page -->
                     <a class="home" href="#">
