Add controller folder with home controller

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -7,7 +7,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
             </article>
             <article class="welcome-content-image">
-                <img src="/static/images/header-dog.png" alt="dog">
+                <img src="/images/header-dog.png" alt="dog">
             </article>
         </section>
 
