Modify login and register forms

--- a/src/views/users/login.hbs
+++ b/src/views/users/login.hbs
@@ -7,14 +7,14 @@
                 <h1>Petstagram</h1>
 
                 <!-- Start Login Form-->
-                <form action="#">
+                <form method="POST"> <!-- //12. A -->
                     <p>
                         <label>Username:</label>
-                        <input type="text" name="" placeholder="Username">
+                        <input type="text" name="username" placeholder="Username"> <!-- //12. A -->
                     </p>
                     <p>
                         <label>Password:</label>
-                        <input type="password" name="" placeholder="Password">
+                        <input type="password" name="password" placeholder="Password"> <!-- //12. A -->
                     </p>
 
                     <!-- Login Button-->
@@ -25,7 +25,7 @@
             <div class="second-option">
 
                 <!-- Link to Register Page-->
-                <p>Don't have account? <a href="#">Register</a></p>
+                <p>Don't have account? <a href="/users/register">Register</a></p> <!-- //12. A -->
             </div>
         </div>
 
