--- a/src/views/users/register.hbs
+++ b/src/views/users/register.hbs
@@ -7,14 +7,14 @@
                 <h1>Petstagram</h1>
 
                 <!-- Start Register Form -->
-                <form action="">
-                    <input type="text" name="" placeholder="Username">
+                <form method="POST"> <!-- //12. A -->
+                    <input type="text" name="username" placeholder="Username"> <!-- //12. A -->
 
-                    <input type="email" name="" placeholder="Email">
+                    <input type="email" name="email" placeholder="Email"> <!-- //12. A -->
 
-                    <input type="password" name="" placeholder="Password">
+                    <input type="password" name="password" placeholder="Password"> <!-- //12. A -->
 
-                    <input type="password" name="" placeholder="Repeat Password">
+                    <input type="password" name="repeatPassword" placeholder="Repeat Password"> <!-- //12. A -->
 
                     <!-- Register Button -->
                     <button type="submit">Register</button>
@@ -24,7 +24,7 @@
             <div class="second-option">
 
                 <!-- Link to Login Page -->
-                <p>Have an account? <a href="#">LogIn</a></p>
+                <p>Have an account? <a href="/users/login">LogIn</a></p> <!-- //12. A -->
             </div>
         </div>
 
