Keep username and email

--- a/src/views/users/register.hbs
+++ b/src/views/users/register.hbs
@@ -8,9 +8,9 @@
 
                 <!-- Start Register Form -->
                 <form method="POST"> <!-- //12. A -->
-                    <input type="text" name="username" placeholder="Username"> <!-- //12. A -->
+                    <input type="text" name="username" value="{{username}}" placeholder="Username"> <!-- //12. A// 26. A -->
 
-                    <input type="email" name="email" placeholder="Email"> <!-- //12. A -->
+                    <input type="email" name="email" value="{{email}}" placeholder="Email"> <!-- //12. A // 26. A-->
 
                     <input type="password" name="password" placeholder="Password"> <!-- //12. A -->
 
