Create photo page

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -40,7 +40,7 @@
                     <ul class="nav-group">
                         <li class="nav-item">
                             <!-- Link to Catalog Page -->
-                            <a href="#">
+                            <a href="/photos">
                                 <i>Catalog</i>
                             </a>
                         </li>
@@ -51,7 +51,7 @@
                         {{#if isAuthenticated}} <!-- 22. A -->
                         <li class="nav-item">
                             <!-- Link to Add Photo Page -->
-                            <a href="#">
+                            <a href="photos/create">
                                 <i>Add Photo</i>
                             </a>
                         </li>
