--- a/src/views/partials/petPhoto.hbs
+++ b/src/views/partials/petPhoto.hbs
@@ -33,7 +33,7 @@
                     <!-- Age of Pet -->
                     <h5 class="petAge">Age: {{age}}</h5>
                     <!-- Link to Photo Details Page -->
-                    <a href="#" id="see-details">
+                    <a href="/photos/{{_id}}/details" id="see-details"> <!-- 30. A-->
                         <h4 class="details">See details</h4>
                     </a>
                 </div>
