--- a/src/views/photos/details.hbs
+++ b/src/views/photos/details.hbs
@@ -41,7 +41,7 @@
                                     </a>
 
                                     <!--Delete Pet Photo -->
-                                    <a href="#">
+                                    <a href="/photos/{{photo._id}}/delete"> <!-- 32. A, THE IN PHOTOCONTROLLER.JS -->
                                         <img class="bin-img" src="/images/icon-remove-22.jpg" alt="bin button">
                                     </a>
                                 </div>
@@ -122,6 +122,8 @@
                             </div>
                         </div>
                     </div>
+                    {{#if isAuthenticated}} <!-- 31. C -->
+                    {{#unless isOwner}} <!-- 31. C -->
                     <div class="addComments">
                         <!-- Start Add Comments Form -->
                         <form method="#" action="#">
@@ -131,6 +133,8 @@
                             <button type="submit">Post</button>
                         </form>
                     </div>
+                    {{/unless}} <!-- 31. C -->
+                    {{/if}}  <!-- 31. C -->
                 </div>
             </div>
         </div>
