--- a/src/views/photos/details.hbs
+++ b/src/views/photos/details.hbs
@@ -35,7 +35,7 @@
                                 <div class="edit-delete-btns">
 
                                     <!-- Edit Pet Photo -->
-                                    <a href="#">
+                                    <a href="/photos/{{photo._id}}/edit"> <!-- 33. A -->
                                         <img class="edit-img" src="/images/edit-pen-icon-6.jpg"
                                             alt="edit button">
                                     </a>
