--- a/src/views/photos/details.hbs
+++ b/src/views/photos/details.hbs
@@ -74,51 +74,9 @@
                         </div>
                         <div class="comments">
                             <div class="comments-top">
-                                <div class="userDetails">
-                                    <div class="comment-data">
-                                        <div class="profilepic">
-                                            <div class="profile_img">
-                                                <div class="image">
-                                                    <!-- User Profile Image -->
-                                                    <img src="/images/person.png" alt="img8">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <!--User's username-->
-                                        <p><b>StevIvanov</b>- OMG where can i get one</p>
-                                    </div>
-                                </div>
-                                <div class="userDetails">
-                                    <div class="comment-data">
-                                        <div class="profilepic">
-                                            <div class="profile_img">
-                                                <div class="image">
-                                                    <!-- User Profile Image -->
-                                                    <img src="/images/person.png" alt="img8">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <!--User's username-->
-                                        <p><b>StevIvanov</b>- OMG where can i get one</p>
-                                    </div>
-                                </div>
-                                <div class="userDetails">
-                                    <div class="comment-data">
-                                        <div class="profilepic">
-                                            <div class="profile_img">
-                                                <div class="image">
-                                                    <!-- User Profile Image -->
-                                                    <img src="/images/person.png" alt="img8">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <!--User's username-->
-                                        <p><b>StevIvanov</b>- OMG where can i get one</p>
-                                    </div>
-                                </div>
+                               {{#each photo.comments}} <!--34. B-->
+                               {{>comment}} <!--34. B-->
+                               {{/each}} <!--34. B-->
                             </div>
                         </div>
                     </div>
@@ -126,8 +84,8 @@
                     {{#unless isOwner}} <!-- 31. C -->
                     <div class="addComments">
                         <!-- Start Add Comments Form -->
-                        <form method="#" action="#">
-                            <textarea id="comment-textarea" name="" cols="40" rows="10"
+                        <form method="POST" action="/photos/{{photo._id}}/comments"> <!-- 34. A -->
+                            <textarea id="comment-textarea" name="message" cols="40" rows="10"
                                 placeholder="Add comment..."></textarea>
                             <!-- Post Comments Button -->
                             <button type="submit">Post</button>
