--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -57,7 +57,7 @@
                         </li>
                         <li class="nav-item">
                             <!-- Link to Profile Page -->
-                            <a href="#">
+                            <a href="/profile">
                                 <i>Profile</i>
                             </a>
                         </li>
